yaml/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: demo-app
  labels:
    app.kubernetes.io/name: demo-app
  spec:
  selector:
    matchLabels:
      app: nginx
      tier: backend
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
        tier: backend
    spec:
      containers:
      - name: nginx
        image: shayabudi8/nginx:nginx
        resources:
          limits:
            cpu: "1"
            memory: "100Mi"

          requests:
            cpu: "0.5"
            memory: "50Mi"

          livenessProbe:
            exec:
              command:
                - cat
                - /var/www/html/index.html
            initialDelaySeconds: 1
            periodSeconds: 5
