yaml/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    run: nginx
spec:
  ports:
  - port: 8082
    protocol: TCP
  selector:
    run: nginx
